--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1447,13 +1447,25 @@ LDA_GA_Test
 |
 | **[A]** The simulated annealing and genetic algorithms to select a subset of informative predictors performed better for models without an inherent variable selection feature (i.e. linear discriminant analysis as compared to random forest). 
 |      **[A.1]** **RF: Random Forest** (<mark style="background-color: #CCECFF">**randomForest**</mark> package)
-|             **[A.1.1]** **RF_FULL (Random Forest Without Simulated Annealing and Genetic Algorithms)**: Cross-Validation Accuracy = 0.77975, Test Accuracy = 0.80303 
-|             **[A.1.2]** **RF_SA (Random Forest With Simulated Annealing)**: Cross-Validation Accuracy = 0.77618, Test Accuracy = 0.77272  
-|             **[A.1.3]** **RF_GA (Random Forest With Genetic Algorithms)**: Cross-Validation Accuracy = 0.79842, Test Accuracy = 0.78787
+|             **[A.1.1]** **RF_FULL (Random Forest Without Simulated Annealing and Genetic Algorithms)**
+|                      **[A.1.1.1]** Cross-Validation Accuracy = 0.77975
+|                      **[A.1.1.2]** Test Accuracy = 0.80303
+|             **[A.1.2]** **RF_SA (Random Forest With Simulated Annealing)**  
+|                      **[A.1.2.1]** Cross-Validation Accuracy = 0.77618
+|                      **[A.1.2.2]** Test Accuracy = 0.77272
+|             **[A.1.3]** **RF_GA (Random Forest With Genetic Algorithms)** 
+|                      **[A.1.3.1]** Cross-Validation Accuracy = 0.79842
+|                      **[A.1.3.2]** Test Accuracy = 0.78787
 |      **[A.2]** **LDA: Linear Discriminant Analysis** (<mark style="background-color: #CCECFF">**MASS**</mark> package)
-|             **[A.2.1]** **LDA_FULL (Linear Discriminant Analysis Without Simulated Annealing and Genetic Algorithms)**: Cross-Validation Accuracy = 0.76754, Test Accuracy = 0.75757 
-|             **[A.2.2]** **LDA_SA (Linear Discriminant Analysis With Simulated Annealing)**: Cross-Validation Accuracy = 0.80941, Test Accuracy = 0.81818  
-|             **[A.2.3]** **LDA_GA (Linear Discriminant Analysis With Genetic Algorithms)**: Cross-Validation Accuracy = 0.79402, Test Accuracy = 0.84848
+|             **[A.2.1]** **LDA_FULL (Linear Discriminant Analysis Without Simulated Annealing and Genetic Algorithms)** 
+|                      **[A.2.1.1]** Cross-Validation Accuracy = 0.76754
+|                      **[A.2.1.2]**Test Accuracy = 0.75757
+|             **[A.2.2]** **LDA_SA (Linear Discriminant Analysis With Simulated Annealing)**
+|                      **[A.2.2.1]** Cross-Validation Accuracy = 0.80941
+|                      **[A.2.2.2]** Test Accuracy = 0.81818
+|             **[A.2.3]** **LDA_GA (Linear Discriminant Analysis With Genetic Algorithms)**
+|                      **[A.2.3.1]** Cross-Validation Accuracy = 0.79402
+|                      **[A.2.3.2]** Test Accuracy = 0.84848
 |
 ```{r section_1.6, warning=FALSE, message=FALSE}
 ##################################
